# cutemail

./: README.md  package-lock.json  package.json  pom.xml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: Clock.svelte  Envelope.svelte  MiniProfile.svelte  Navigator.svelte  SideMenu.svelte
src/components/navbar/: NavBar.svelte
src/components/root/: HomeApplicationLink.svelte
src/componets/: Clock.svelte  Day.svelte  LeftWindow.svelte  NavBanner.svelte  RightWindow.svelte
src/lib/: global.css
src/lib/componets/: ButtonIcon.svelte  Clock.svelte  Day.svelte  LeftWindow.svelte  NavBanner.svelte  NavItem.svelte  RichTextEditor.svelte  ToolBarButton.svelte
src/lib/types/: Mail.ts
src/main/java/: module-info.java
src/main/java/io/github/abdallahalghamdi/: Main.java
src/main/java/io/github/abdallahalghamdi/maillist/: Controller.java  Interactor.java  Model.java  View.java
src/main/resources/css/: main.css
src/routes/: +layout.svelte  +page.svelte
src/routes/inbox/: +page.svelte
src/routes/mail/: +page.svelte
src/routes/notes/: +page.svelte
src/routes/notes/[slug]/: +page.svelte
static/backgrounds/: LICENSE
static/fonts/: readme.txt
static/icons/aspecs/: readme.txt
static/icons/days/: days.aseprite
static/icons/mayke_arth/: readme.txt
static/icons/piiixl/: readme.txt
static/piiixl/: license.txt  readme.txt
static/romero/: readme.txt
static/srtoasty/: readme.txt
static/srtoasty/cards/: readme.txt
(+5 files in other folders)
